Migrate to React Router 7 SSR for improved SEO
- Install @react-router/dev and @react-router/node packages
- Create React Router 7 app structure (app/ directory)
- Add react-router.config.ts with SSR enabled
- Update vite.config.ts to use React Router plugin
- Create app/root.tsx with server-side meta tags and structured data
- Migrate routes to React Router 7 format:
  - app/routes/_index.tsx (home)
  - app/routes/contact.tsx
  - app/routes/services..tsx (dynamic routes)
  - app/routes/$.tsx (404 catch-all)
  - app/routes/sitemap[.]xml.ts (dynamic sitemap)
- Create app/entry.client.tsx and app/entry.server.tsx
- Move structured data from client component to server-side rendering
- Add manifest.json for PWA support
- Update package.json scripts for React Router 7
- Create server.js for production Node.js server
- Remove StructuredData import from Layout component

Benefits:
- Meta tags now rendered server-side in initial HTML (better SEO)
- Automatic code splitting per route
- Streaming SSR for better performance
- Enhanced structured data schemas (WebSite, Organization)
- Dynamic sitemap generation

--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "react-router dev",
+    "build": "react-router build",
+    "start": "node server.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-router/node": "^7.9.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@react-router/dev": "^7.9.5",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
