--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.12",
     "@react-router/node": "^7.9.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
