--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
   "scripts": {
     "dev": "react-router dev",
     "build": "react-router build",
-    "start": "node server.js",
+    "start": "tsx server.ts",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "typecheck:app": "tsc --noEmit --project tsconfig.app.json",
+    "typecheck:node": "tsc --noEmit --project tsconfig.node.json"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
+    "@react-router/express": "^7.9.5",
     "@react-router/node": "^7.9.5",
+    "compression": "^1.8.1",
+    "express": "^5.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@react-router/dev": "^7.9.5",
     "@tailwindcss/postcss": "^4.1.16",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.5",
+    "@types/express-serve-static-core": "^5.1.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
