--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,7 @@
     "useDefineForClassFields": true,
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "types": ["vite/client"],
+    "types": ["@react-router/node", "vite/client"],
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -24,5 +24,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "app", "vite-env.d.ts"]
+  "include": ["src", "app", "vite-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
