--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "typecheck:node": "tsc --noEmit --project tsconfig.node.json"
   },
   "dependencies": {
+    "@conform-to/react": "^1.13.1",
+    "@conform-to/zod": "^1.13.1",
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@react-router/express": "^7.9.5",
     "@react-router/node": "^7.9.5",
@@ -22,7 +26,9 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
-    "tsx": "^4.19.2"
+    "remix-utils": "^9.0.0",
+    "tsx": "^4.19.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
