--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-toast": "^1.2.15",
     "@react-router/express": "^7.9.5",
     "@react-router/node": "^7.9.5",
     "compression": "^1.8.1",
@@ -27,6 +28,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "remix-utils": "^9.0.0",
+    "resend": "^6.3.0",
     "tsx": "^4.19.2",
     "zod": "^4.1.12"
   },
