Add email integration, toast notifications, and type-aware linting
- Change contact form from GET to POST for better security
- Integrate Resend for email sending with mock for development
- Add Radix UI toast notifications for successful form submissions
- Enable type-aware linting with TypeScript ESLint
- Fix all resulting lint errors (unused vars, floating promises, unsafe assignments)
- Use proper ServerBuild type from react-router for type safety
- Update README with environment variables and tech stack info

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "rootDirs": [".", "./.react-router/types"],
 
     /* Linting */
     "strict": true,
@@ -24,5 +25,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "app", "vite-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["src", "app", "vite-env.d.ts", ".react-router/types/**/*", "**/*.ts", "**/*.tsx"]
 }
