--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "tsx server.ts",
     "lint": "eslint .",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit",
-    "typecheck:app": "tsc --noEmit --project tsconfig.app.json",
+    "typecheck": "react-router typegen && tsc --noEmit",
+    "typecheck:app": "react-router typegen && tsc --noEmit --project tsconfig.app.json",
     "typecheck:node": "tsc --noEmit --project tsconfig.node.json"
   },
   "dependencies": {
@@ -41,7 +41,6 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
