Use dotenv and proper env variables for BASE_URL
- Install dotenv package
- Load dotenv in entry.server.tsx
- Use VITE_BASE_URL for client-side code (import.meta.env)
- Use BASE_URL for server-side code (process.env)
- Update TypeScript definitions for import.meta.env
- Update .env with both BASE_URL and VITE_BASE_URL

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
+# Server-side (used by loaders, actions)
 BASE_URL=http://localhost:5173
+
+# Client-side (exposed by Vite, must have VITE_ prefix)
+VITE_BASE_URL=http://localhost:5173
+
+# Indexing control
+ALLOW_INDEXING=false
