Fix .well-known directory TypeScript config and update security.txt to use process.env

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,5 +25,11 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "app", "vite-env.d.ts", ".react-router/types/**/*", "**/*.ts", "**/*.tsx"]
+  "include": [
+    "src/**/*", 
+    "app/**/*", 
+    "app/routes/.well-known/**/*",
+    "vite-env.d.ts", 
+    ".react-router/types/**/*"
+  ]
 }
