--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "start": "tsx server.ts",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "typecheck": "react-router typegen && tsc --noEmit",
     "typecheck:app": "react-router typegen && tsc --noEmit --project tsconfig.app.json",
-    "typecheck:node": "tsc --noEmit --project tsconfig.node.json"
+    "typecheck:node": "tsc --noEmit --project tsconfig.node.json",
+    "pre-generate-images": "node scripts/pre-generate-all-images.mjs"
   },
   "dependencies": {
     "@conform-to/react": "^1.13.1",
@@ -39,6 +43,7 @@
     "react-router-dom": "^7.9.5",
     "remix-utils": "^9.0.0",
     "resend": "^6.3.0",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.3.1",
     "tsx": "^4.19.2",
     "zod": "^4.1.12"
@@ -52,16 +57,18 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
+    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/eslint-plugin": "^1.4.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "sharp": "^0.34.4",
     "tailwindcss": "^4.1.16",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.6"
   }
 }
