--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,17 @@ dist-ssr
 build
 .react-router
 *.local
+coverage
+.nyc_output
+
+# Legacy static images (replaced by on-demand image service)
+public/images
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.*.local
 
 # Editor directories and files
 .vscode/*
